# Spatio-Temporal-PM2.5-Forecasting-

./: .env.example  .gitignore  AI_ENGINEERING_CHECKLIST.md  COMPARISON_WITH_REFERENCE.md  DATA_COLLECTION_STATUS.md  GITHUB_PUSH_SUMMARY.md  HISTORICAL_DATA.md  PIPELINE_STATUS.md  PROJECT_STRUCTURE.md  PUSH_INSTRUCTIONS.md  RATE_LIMIT_FIX.md  RATE_LIMIT_FIXES_APPLIED.md  README.md  check_data.py  check_training_ready.py  config.py  config.yaml  hyperparameter_tuning.py  monitor_pipeline.py  pipeline.py  pipline.ipynb  prepare_push.sh  pyproject.toml  requirements.txt  run_inference.py  run_pipeline.py  test_weather_collection.py  train.py
.github/: PULL_REQUEST_TEMPLATE.md
configs/: default.yaml
core/: __init__.py  exceptions.py  validators.py
data_collectors/: __init__.py  fire_collector.py  pm25_collector.py  static_collector.py  weather_collector.py
docs/: DATA_STATUS_REPORT.md  QUICKSTART.md  README.md  methodology.md
evaluation/: __init__.py  metrics.py  visualization.py
features/: __init__.py  data_cleaner.py  time_features.py  wind_features.py
inference/: __init__.py  forecaster.py
models/: __init__.py  attention.py  conv_lstm_model.py  ensemble.py  lstm_model.py  mc_dropout.py  st_unn_model.py
preprocessing/: __init__.py  grid_interpolation.py  normalizer.py
scripts/: START_PIPELINE.sh  install.sh  push_to_github.sh  push_with_mcp.py  wait_for_training_data.sh
src/pm25stgnn/: config.py  dataset.py  eval.py  graph.py  (+2 more)
training/: __init__.py  data_loader.py  trainer.py
utils/: __init__.py  logger.py  sliding_window.py  tensor_builder.py
(+12 files in other folders)
